<resources>
    <string name="app_name">Refresh Cafe</string>
    <string name="toMenuBtn">Menu</string>
    <string name="HomeScreenWelcome">Welcome to the Café!</string>
    <string name="title_activity_test_menu">testMenu</string>
    <string name="title_activity_start_menu">StartMenu</string>
    <string name="title_activity_specials_menu">SpecialsMenu</string>
    <string name="title_activity_salad_menu">SaladMenu</string>
    <string name="title_activity_soup_menu">SoupMenu</string>

    <!--Beginning menu strings-->
    <string name="menuTitle">Choose from Our Menu!</string>
    <string name="specialsBtn">Specials!</string>
    <string name="saladsBtn">Salads</string>
    <string name="soupBtn">Soups</string>
    <string name="dessertBtn">Dessert</string>
    <string name="beverageBtn">Beverages</string>
    <string name="title_activity_dessert_menu">DessertMenu</string>
    <string name="title_activity_beverage_menu">BeverageMenu</string>
    <string name="specItem1">Braised Brisket over Egg Noodles</string>
    <string name="specItem2">Smoked Turkey BBQ Slides</string>
    <string name="title_activity_special_itm1">SpecialItm1</string>
    <string name="action_settings">Settings</string>
    <string name="sp1Desc">Slowly braised brisket over top of egg noodles with vegetables to compliment.</string>
    <string name="title_activity_special__item_one">special_ItemOne</string>
    <string name="sp2Desc">Smoked turkey with a signature BBQ sause between two slider rolls with an apple and jaicana slaw on the side</string>
    <string name="saladItem1">Grilled Chicken Salad with Pomegranate Vinaigrette</string>
    <string name="soupItem1">Shrimp and Corn Chowder</string>
    <string name="soup1Desc">A hearty cream based soup with corn, bacon, potatoes, and shrimp</string>
    <string name="soupItem2">Vegetarian Three Bean Soup</string>
    <string name="soup2Desc">Three bean vegetarian with hearty vegetables</string>
    <string name="dessItem1">Cranberry Apple Crumble</string>
    <string name="dess1Desc">Fresh cranberries and granny smith apples with an oat crumble on top.</string>
    <string name="bevMenu1">Minute Maid</string>
    <string name="bevMenu2">Fountain Drinks</string>
    <string name="bevMenu3">Coffee/Tea</string>
    <string name="bevMenu4">Bottled</string>
    <string name="bottTitle">Bottled Drinks</string>
    <string name="CoffTitle">Coffee</string>
    <string name="TeaTitle">Tea</string>
    <string name="coffOp1">Regular</string>
    <string name="coffOp2">Black</string>
    <string name="teaOp1">Sweet</string>
    <string name="teaOp2">Unsweet</string>
    <string name="salad1Desc">Spring salad mix with red onions, tomatoes, droied apricots, grilled chicken with pomegranate vinaigrette on the side.</string>
</resources>
