<?xml version="1.0" encoding="utf-8"?>
<!--El Chris Edward-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_first_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mrel.refreshcafe.FirstMenu"
    tools:showIn="@layout/activity_first_menu">

    <Button
        android:text="@string/dessertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/dessertBtn"
        android:layout_below="@+id/soupsBtn"
        android:layout_alignLeft="@+id/soupsBtn"
        android:layout_alignStart="@+id/soupsBtn"
        android:fontFamily="casual"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/soupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/soupsBtn"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:layout_below="@+id/saladsBtn"
        android:layout_alignLeft="@+id/saladsBtn"
        android:layout_alignStart="@+id/saladsBtn" />

    <Button
        android:text="@string/saladsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:id="@+id/saladsBtn"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@android:color/holo_green_light"
        android:layout_below="@+id/specialsBtn"
        android:layout_alignLeft="@+id/beverageBtn"
        android:layout_alignStart="@+id/beverageBtn" />

    <Button
        android:text="@string/beverageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/beverageBtn"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:layout_below="@+id/dessertBtn"
        android:layout_alignLeft="@+id/specialsBtn"
        android:layout_alignStart="@+id/specialsBtn"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp" />

    <Button
        android:text="@string/specialsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:id="@+id/specialsBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:fontFamily="casual"
        android:drawableRight="@android:drawable/btn_star_big_on"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
